# one_code_per_day

./: .gitignore  README.md  eight-queen.lua  etude.lua  lisp_study.md  night_junkai.lua  post_on_scrapbox.rb  scrap_bookmarklet.js  separate_by_comma.c  wizard_adventure.lisp
AOJ/ALDS1_11_A_Graph/: main.cpp
AOJ/ALDS1_12_B_SingleSourceShortestPath/: bellman_ford.cpp  heap_dijkstr.cpp  main.cpp  naive_dijkstra.cpp  priority_dijkstra.cpp  warshall_floyd.cpp
AOJ/ALDS1_12_C_SingleSourceShortestPathII/: main.cpp
AOJ/ALDS1_4_B/: my.c
AOJ/MaximumProfit/: a.out  main.cpp
AtCoder/: ABC081A - Placing Marbles.cpp  ABC085B - Kagami Mochi.cpp  PracticeA - Welcome to AtCoder.cpp  template.cpp
AtCoder/abc145/: README.md  a.cpp  b.cpp  d.cpp
AtCoder/abc146/: contest.acc.json
AtCoder/abc146/a/: a.out  (+1 more)
AtCoder/abc154/: contest.acc.json
AtCoder/abc180/: contest.acc.json  tmp
AtCoder/abl/: contest.acc.json
AtCoder/arc104/: contest.acc.json
AtCoder/arc105/: contest.acc.json
AtCoder/arc106/: contest.acc.json
AtCoder/ddcc2020/: .b.cpp.swp  a.cpp  b.cpp
AtCoder/hhkb2020/: contest.acc.json
AtCoder/practice2/: contest.acc.json
AtCoder/problems/: mkd.sh
AtCoder/sumitrust2019/: contest.acc.json
AtCoder/template/: Makefile  a.cpp
AtCoder/tutor/: ABC081B - Shift only.cpp  ABC083B - Some Sums.cpp  ABC086A - Product.cpp  ABC087B - Coins.cpp  ABC088B - Card Game for Two.cpp
c_sandbox/assembler/: .masm_att_sample.s.swp  sample.c
c_sandbox/capsule_inline/: Makefile  example_lib.c  example_lib.h
c_sandbox/socket/: Makefile  client.c  server
lang_etude/c/: .gitignore  gendir.sh  libsymlink.sh
lang_etude/lua/: eight-queen.lua  recursive_function.lua
lang_etude/py_docker/: Dockerfile  README  run.sh  sample.py
lang_etude/rust/ProgrammingRust2ndEdition/actix-gcd/: Cargo.toml
lang_etude/rust/ProgrammingRust2ndEdition/actix-gcd/src/: main.rs
lang_etude/rust/ProgrammingRust2ndEdition/mandelbrot/: Cargo.toml
lang_etude/rust/ProgrammingRust2ndEdition/mandelbrot/src/: main.rs
lang_etude/rust/ProgrammingRust2ndEdition/quickreplace/: Cargo.toml
lang_etude/rust/ProgrammingRust2ndEdition/quickreplace/src/: main.rs
lang_etude/scala/: .HelloApp.scala.swp  HelloScript.scala  docker_pull.sh
lang_etude/sml/: .README.md.swp  Dockerfile  README.md
qt/sample/: moc_mymodel.cpp  moc_myview.cpp  moc_testview.cpp  sample.pro
shell_shocker/: random.sh
sutraCopying/chibicc/: chibicc.h  main.c  preprocess.c
tax_calculator/: calc_tax.py  emp_income_deduction.sh  income_tax.sh  social_insurance.sh  tmp.txt  tmp2.txt  tmp3.txt
(+195 files in other folders)
