[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The num crate on crates.io provides a complex number type we can use.
num = "0.4"
# The image crate provides functions for reading and writing a wide variety of
# image formats, along with some basic image manipulation functions. In
# particular, it includes an encoder for the PNG image file format, which this
# program uses to save the final results of the calculation.
image = "0.13.0"
