[package]
name = "quickreplace"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Rust crates that have reached version 1.0, as these have, follow the
# "semantic versioning" rules: until the major version number 1 changes,
# newer versions should always be compatible extensions of their predecessors.
# So if we test our program against version 1.2 of some crate, it should still
# work with versions 1.3, 1.4, and so on; but version 2.0 could introduce
# incompatible changes.
# When we simply request version "1" of a crate in a Cargo.toml file, Cargo
# will use the newest available version of the crate before 2.0.
text-colorizer = "1"
regex = "1"
